sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( for (i <- 1 to getNombreValeurs-1){plusPetit(i,i-1) == true}){
                    ^AlgBubbleSort1:4: error: return outside method definition
		return true
                ^AlgBubbleSort1:6: error: return outside method definition
	return false
        ^AlgBubbleSort1:2: error: not found: value trie
var trie():Boolean = {
    ^AlgBubbleSort1:9: error: not found: value trie
	while (!trie()){
                ^